# Crowd-Simulation

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a  cmake_install.cmake  compil.sh  tree  treeOpencv  x10-y10-p5-gen5.txt
exe/: cpuSimulation  gpuObjSimulation  gpuSimulation  onlyCPU
input Image/samples/1/: setup.txt
input Image/samples/10/: setup.txt
input Image/samples/11/: setup.txt
input Image/samples/12/: setup.txt
input Image/samples/13/: setup.txt
input Image/samples/14/: setup.txt
input Image/samples/15/: setup.txt
input Image/samples/16/: setup.txt
input Image/samples/17/: setup.txt
input Image/samples/2/: setup.txt
input Image/samples/3/: setup.txt
input Image/samples/4/: setup.txt
input Image/samples/5/: setup.txt
input Image/samples/7/: setup.txt
input Image/samples/8/: setup.txt
input Image/samples/9/: setup.txt
input Image/simulated/: setup.txt
markdown/: Pointage.md  journal_de_bord.md  note.md  onlyCPU.md  pointage.md  withGPU.md
markdown/content/: Diagramme sans nom.drawio  Err001.mov  digramULM.drawio  exempleCout.drawio
src/: README.md  benchmark.ipynb  onlyCPU.cpp
src/ImageCreator/: main.c
src/cpu/: README.md  benchmark.ipynb  onlyCPU.cpp
src/gpu/: README.md  function.cpp  kernel.cu  kernel.cuh  kernel.hpp  main.cpp  main.cu  main.hpp  simulation.cpp  simulation.hpp
src/gpu/utils/: commonCUDA.hpp
src/gpuObjectVersion/: Export.cpp  Export.hpp  Kernel.cpp  Kernel.cu  Kernel.hpp  Map.cpp  Map.cu  Map.hpp  Population.cpp  Population.cu  Population.hpp  README.md  Settings.cpp  Settings.hpp  Simulation.cpp  Simulation.hpp  main.cpp  main.cu  note.md
src/gpuObjectVersion/utils/: matrixMove.cpp  setup.hpp  utils.cpp  utils.hpp
